src/bc/antlr/bcParser.java
// Generated from src/bc/antlr/bc.g4 by ANTLR 4.7.2
package bc.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		BigNumberLiteral=46, StringLiteral=47, Identifier=48, DropWS=49;
	public static final int
		RULE_program = 0, RULE_bcStatement = 1, RULE_bcStatementCase = 2, RULE_bcIf = 3, 
		RULE_bcWhile = 4, RULE_bcFor = 5, RULE_bcBreak = 6, RULE_bcContinue = 7, 
		RULE_bcHalt = 8, RULE_bcReturn = 9, RULE_bcBlock = 10, RULE_bcFunctionDefinition = 11, 
		RULE_bcPrint = 12, RULE_printArg = 13, RULE_parameters = 14, RULE_bcAutoList = 15, 
		RULE_bcVarDecl = 16, RULE_bcAssignment = 17, RULE_bcExpr = 18, RULE_bcLogicalOrExpr = 19, 
		RULE_bcLogicalAndExpr = 20, RULE_bcLogicalNotExpr = 21, RULE_bcRelationalOpExpr = 22, 
		RULE_bcAssignmentOpExpr = 23, RULE_bcAdditiveExpr = 24, RULE_bcMultiplicativeExpr = 25, 
		RULE_bcPowerExpr = 26, RULE_bcIncDecExpr = 27, RULE_bcNegExpr = 28, RULE_bcPostFixExpr = 29, 
		RULE_bcVarAccess = 30, RULE_bcFunctionCall = 31, RULE_bcArgs = 32, RULE_bcArg = 33, 
		RULE_bcPrimaryExpr = 34, RULE_bcParExpr = 35, RULE_bcNumber = 36, RULE_bcString = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "bcStatement", "bcStatementCase", "bcIf", "bcWhile", "bcFor", 
			"bcBreak", "bcContinue", "bcHalt", "bcReturn", "bcBlock", "bcFunctionDefinition", 
			"bcPrint", "printArg", "parameters", "bcAutoList", "bcVarDecl", "bcAssignment", 
			"bcExpr", "bcLogicalOrExpr", "bcLogicalAndExpr", "bcLogicalNotExpr", 
			"bcRelationalOpExpr", "bcAssignmentOpExpr", "bcAdditiveExpr", "bcMultiplicativeExpr", 
			"bcPowerExpr", "bcIncDecExpr", "bcNegExpr", "bcPostFixExpr", "bcVarAccess", 
			"bcFunctionCall", "bcArgs", "bcArg", "bcPrimaryExpr", "bcParExpr", "bcNumber", 
			"bcString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'if'", "'('", "')'", "'else'", "'while'", "'for'", "'break'", 
			"'continue'", "'halt'", "'return'", "'{'", "'}'", "'define'", "'void'", 
			"'print'", "','", "'auto'", "'[]'", "'='", "'||'", "'&&'", "'!'", "'=='", 
			"'!='", "'<='", "'>='", "'<'", "'>'", "'+='", "'-='", "'/='", "'*='", 
			"'%='", "'^='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'++'", "'--'", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "BigNumberLiteral", 
			"StringLiteral", "Identifier", "DropWS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<BcStatementContext> bcStatement() {
			return getRuleContexts(BcStatementContext.class);
		}
		public BcStatementContext bcStatement(int i) {
			return getRuleContext(BcStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				bcStatement();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__15) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcStatementContext extends ParserRuleContext {
		public BcStatementCaseContext bcStatementCase() {
			return getRuleContext(BcStatementCaseContext.class,0);
		}
		public BcStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcStatement; }
	}

	public final BcStatementContext bcStatement() throws RecognitionException {
		BcStatementContext _localctx = new BcStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bcStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			bcStatementCase();
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(82);
				match(T__0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcStatementCaseContext extends ParserRuleContext {
		public BcIfContext bcIf() {
			return getRuleContext(BcIfContext.class,0);
		}
		public BcWhileContext bcWhile() {
			return getRuleContext(BcWhileContext.class,0);
		}
		public BcForContext bcFor() {
			return getRuleContext(BcForContext.class,0);
		}
		public BcBlockContext bcBlock() {
			return getRuleContext(BcBlockContext.class,0);
		}
		public BcFunctionDefinitionContext bcFunctionDefinition() {
			return getRuleContext(BcFunctionDefinitionContext.class,0);
		}
		public BcBreakContext bcBreak() {
			return getRuleContext(BcBreakContext.class,0);
		}
		public BcContinueContext bcContinue() {
			return getRuleContext(BcContinueContext.class,0);
		}
		public BcReturnContext bcReturn() {
			return getRuleContext(BcReturnContext.class,0);
		}
		public BcHaltContext bcHalt() {
			return getRuleContext(BcHaltContext.class,0);
		}
		public BcPrintContext bcPrint() {
			return getRuleContext(BcPrintContext.class,0);
		}
		public BcExprContext bcExpr() {
			return getRuleContext(BcExprContext.class,0);
		}
		public BcStatementCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcStatementCase; }
	}

	public final BcStatementCaseContext bcStatementCase() throws RecognitionException {
		BcStatementCaseContext _localctx = new BcStatementCaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bcStatementCase);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				bcIf();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				bcWhile();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				bcFor();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				bcBlock();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				bcFunctionDefinition();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				bcBreak();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(91);
				bcContinue();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 8);
				{
				setState(92);
				bcReturn();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 9);
				{
				setState(93);
				bcHalt();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 10);
				{
				setState(94);
				bcPrint();
				}
				break;
			case T__2:
			case T__22:
			case T__35:
			case T__36:
			case T__41:
			case T__42:
			case BigNumberLiteral:
			case StringLiteral:
			case Identifier:
				enterOuterAlt(_localctx, 11);
				{
				setState(95);
				bcExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcIfContext extends ParserRuleContext {
		public BcExprContext bcExpr() {
			return getRuleContext(BcExprContext.class,0);
		}
		public List<BcStatementContext> bcStatement() {
			return getRuleContexts(BcStatementContext.class);
		}
		public BcStatementContext bcStatement(int i) {
			return getRuleContext(BcStatementContext.class,i);
		}
		public BcIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcIf; }
	}

	public final BcIfContext bcIf() throws RecognitionException {
		BcIfContext _localctx = new BcIfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bcIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__1);
			setState(99);
			match(T__2);
			setState(100);
			bcExpr();
			setState(101);
			match(T__3);
			setState(102);
			bcStatement();
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(103);
				match(T__4);
				setState(104);
				bcStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcWhileContext extends ParserRuleContext {
		public BcExprContext bcExpr() {
			return getRuleContext(BcExprContext.class,0);
		}
		public BcStatementContext bcStatement() {
			return getRuleContext(BcStatementContext.class,0);
		}
		public BcWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcWhile; }
	}

	public final BcWhileContext bcWhile() throws RecognitionException {
		BcWhileContext _localctx = new BcWhileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bcWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__5);
			setState(108);
			match(T__2);
			setState(109);
			bcExpr();
			setState(110);
			match(T__3);
			setState(111);
			bcStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcForContext extends ParserRuleContext {
		public BcStatementContext bcStatement() {
			return getRuleContext(BcStatementContext.class,0);
		}
		public List<BcExprContext> bcExpr() {
			return getRuleContexts(BcExprContext.class);
		}
		public BcExprContext bcExpr(int i) {
			return getRuleContext(BcExprContext.class,i);
		}
		public BcForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcFor; }
	}

	public final BcForContext bcFor() throws RecognitionException {
		BcForContext _localctx = new BcForContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bcFor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__6);
			setState(114);
			match(T__2);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				setState(115);
				bcExpr();
				}
			}

			setState(118);
			match(T__0);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				setState(119);
				bcExpr();
				}
			}

			setState(122);
			match(T__0);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				setState(123);
				bcExpr();
				}
			}

			setState(126);
			match(T__3);
			setState(127);
			bcStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcBreakContext extends ParserRuleContext {
		public BcBreakContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcBreak; }
	}

	public final BcBreakContext bcBreak() throws RecognitionException {
		BcBreakContext _localctx = new BcBreakContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bcBreak);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcContinueContext extends ParserRuleContext {
		public BcContinueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcContinue; }
	}

	public final BcContinueContext bcContinue() throws RecognitionException {
		BcContinueContext _localctx = new BcContinueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bcContinue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcHaltContext extends ParserRuleContext {
		public BcHaltContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcHalt; }
	}

	public final BcHaltContext bcHalt() throws RecognitionException {
		BcHaltContext _localctx = new BcHaltContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bcHalt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcReturnContext extends ParserRuleContext {
		public BcExprContext bcExpr() {
			return getRuleContext(BcExprContext.class,0);
		}
		public BcReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcReturn; }
	}

	public final BcReturnContext bcReturn() throws RecognitionException {
		BcReturnContext _localctx = new BcReturnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bcReturn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__10);
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(136);
				bcExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcBlockContext extends ParserRuleContext {
		public List<BcStatementContext> bcStatement() {
			return getRuleContexts(BcStatementContext.class);
		}
		public BcStatementContext bcStatement(int i) {
			return getRuleContext(BcStatementContext.class,i);
		}
		public BcBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcBlock; }
	}

	public final BcBlockContext bcBlock() throws RecognitionException {
		BcBlockContext _localctx = new BcBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_bcBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__11);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__15) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				{
				setState(140);
				bcStatement();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcFunctionDefinitionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(bcParser.Identifier, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public BcAutoListContext bcAutoList() {
			return getRuleContext(BcAutoListContext.class,0);
		}
		public List<BcStatementContext> bcStatement() {
			return getRuleContexts(BcStatementContext.class);
		}
		public BcStatementContext bcStatement(int i) {
			return getRuleContext(BcStatementContext.class,i);
		}
		public BcFunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcFunctionDefinition; }
	}

	public final BcFunctionDefinitionContext bcFunctionDefinition() throws RecognitionException {
		BcFunctionDefinitionContext _localctx = new BcFunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bcFunctionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__13);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(149);
				match(T__14);
				}
			}

			setState(152);
			match(Identifier);
			setState(153);
			match(T__2);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(154);
				parameters();
				}
			}

			setState(157);
			match(T__3);
			setState(158);
			match(T__11);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(159);
				bcAutoList();
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__15) | (1L << T__22) | (1L << T__35) | (1L << T__36) | (1L << T__41) | (1L << T__42) | (1L << BigNumberLiteral) | (1L << StringLiteral) | (1L << Identifier))) != 0)) {
				{
				{
				setState(162);
				bcStatement();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcPrintContext extends ParserRuleContext {
		public List<PrintArgContext> printArg() {
			return getRuleContexts(PrintArgContext.class);
		}
		public PrintArgContext printArg(int i) {
			return getRuleContext(PrintArgContext.class,i);
		}
		public BcPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcPrint; }
	}

	public final BcPrintContext bcPrint() throws RecognitionException {
		BcPrintContext _localctx = new BcPrintContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_bcPrint);
		int _la;
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(T__15);
				setState(171);
				printArg();
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(172);
					match(T__16);
					setState(173);
					printArg();
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				match(T__15);
				setState(180);
				match(T__2);
				setState(181);
				printArg();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16) {
					{
					{
					setState(182);
					match(T__16);
					setState(183);
					printArg();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintArgContext extends ParserRuleContext {
		public BcExprContext bcExpr() {
			return getRuleContext(BcExprContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(bcParser.StringLiteral, 0); }
		public PrintArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printArg; }
	}

	public final PrintArgContext printArg() throws RecognitionException {
		PrintArgContext _localctx = new PrintArgContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_printArg);
		try {
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(193);
				bcExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(194);
				match(StringLiteral);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<BcVarDeclContext> bcVarDecl() {
			return getRuleContexts(BcVarDeclContext.class);
		}
		public BcVarDeclContext bcVarDecl(int i) {
			return getRuleContext(BcVarDeclContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			bcVarDecl();
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__16) {
				{
				{
				setState(198);
				match(T__16);
				setState(199);
				bcVarDecl();
				}
				}
				setState(204);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BcAutoListContext extends ParserRuleContext {
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public BcAutoListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bcAutoList; }
	}
